Add Java port of the Spark job alongside the Scala one
Same job in both languages, producing identical output. Scala keeps sbt;
Java gets Maven, per the conventional choice for a Java Spark project.

The Java record type has to be a mutable JavaBean, not a record.
Encoders.bean discovers fields via java.beans.Introspector, which looks
for getX()/setX() pairs; a record exposes x() accessors and no setters,
so the introspector finds no properties and the encoder fails. Spark
4.2's JavaTypeInference has no record support. Hence PersonBean at 94
lines against the case class's 7.

ParsePeopleJava also builds its StructType by hand rather than using
Encoders.bean(...).schema(), because Introspector returns properties
alphabetically and would reorder the printed columns.

Deconflicting the two build tools:
- Maven's build directory is maven-target, not target. Both tools
  default to target/, so mvn clean would delete the Scala build's
  output and sbt clean the Java one's.
- sbt's Compile / unmanagedSourceDirectories is narrowed to
  src/main/scala. sbt compiles src/main/java by default, which broke
  sbt run with "Multiple main classes detected" once a Java main
  class existed.

Both builds pin JDK 21 (Spark 4 supports 17 and 21 only); Maven itself
still runs on the machine default and compiles with release 21.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>